# Piano

./: .gitmodules  Piano.sln  README.md  TODO_and_Notes.txt  commit.bat
Piano/: CMakeLists.txt
Piano/PianoEngine/: CMakeLists.txt
Piano/PianoEngine/src/: defines.h  logger.h  piano_hero.h
Piano/PianoEngine/src/core/: global_stats.h  piano_application.cpp  piano_application.h
Piano/PianoEngine/src/math/: vector.h
Piano/PianoEngine/src/platform/: filesystem.h  glad.c  platform.cpp  platform.h
Piano/PianoEngine/src/renderer/: renderer.cpp  renderer.h  renderer_context.h  shader.h
Piano/PianoGame/: CMakeLists.txt
Piano/PianoGame/res/shaders/: base.vert  note.frag  note.vert  text.frag  text.vert
Piano/PianoGame/res/songs/: doublenotes_fast.mid  doublenotes_slow1.mid  rugrats.mid  star.mid  testsongoctave.mid
Piano/PianoGame/src/: gameplay.h  midi.cpp  midi.h  source.cpp
Piano/PianoHero/: CMakeLists.txt
Piano/PianoHero/src/: defines.h
Piano/PianoHero/src/core/: piano.cpp
Piano/PianoHero/src/math/: vector.h
Piano/PianoHero/src/platform/: platform.cpp
Piano/PianoHero/src/renderer/: renderer.cpp  renderer.h
Piano/libraries/include/glad/: glad.h
PianoCore/: PianoCore.vcxproj  PianoCore.vcxproj.filters  glad.c
PianoCore/res/shaders/: base.frag  base.vert
PianoCore/src/: defines.h  filesystem.h  shader.h  source.cpp  window.h
PianoCore/src/core/: piano.h
PianoCore/src/platform/: filesystem.h  platform.h
PianoCore/src/renderer/: renderer.cpp
PianoCore/src/ui/: ui_element.h
